--- a/Sort-task/style.css
+++ b/Sort-task/style.css
@@ -65,6 +65,7 @@ body{
     margin: 18px 0 50px;
 }
 .Generated-random-numbers, .Sorted-numbers{
+    display: none;
     border: 1px solid var(--light-grey);
     border-radius: var(--border-radius-small);
     color:var(--wight);
@@ -72,10 +73,11 @@ body{
 
     box-sizing: border-box; 
     max-width: 500px;
-    padding: 7px 44px
+    padding: 7px 44px;
+    word-break:break-all;
 }  
 .Sort-number-coneiner{
-    display: flex;
+    display: none;
     gap:35px;
     flex-direction:column;
     align-items: center;
@@ -102,10 +104,9 @@ body{
     padding: 0 0 0 16px;
     
 }
-
-.Generated-random-numbers{
-    display: block;
+.Generated-random-number{
+    display: none;
 }
 .Sorted-numbers{
-    display: block;
+    display: none;
 }
