--- a/Sort-task/style.css
+++ b/Sort-task/style.css
@@ -55,7 +55,7 @@ body{
 
     padding: 32px 107px;
 }
-.Random-number-generator-button:hover, .Sort-number-button:hover{
+.Random-number-generator-button:hover, .Sort-number-button:hover, .dropdown-Sort-metod-buttom:hover{
     background-color: var(--light-hover-gray);
 }
 .Random-number-discription{
@@ -84,25 +84,24 @@ body{
     
 } 
 .dropdown-Sort-metod-buttom{
-    background: var(--grey);
+    background: var(--grey) url(list-mark.png);
     border: 1px solid var(--light-grey);
     border-radius: var(--border-radius-big);
     color: var(--wight);
     font: var(--small-buttom);
 
-    padding: 6px 29px;
+    padding: 6px 29px 6px 35px;
     text-align: center;
     width: max-content;
 	box-sizing: border-box;
     text-decoration: none;
-}
-.dropdown-Sort-metod-buttom-name{
-    background: var(--grey) url(list-mark.png);
+    -moz-appearance: none;
+	-webkit-appearance: none;
 
     background-repeat: no-repeat;
-    background-position: 0 ;
-    padding: 0 0 0 16px;
-    
+    background-position: 10px;
+    cursor: pointer;
+
 }
 .Generated-random-number{
     display: none;
@@ -110,3 +109,36 @@ body{
 .Sorted-numbers{
     display: none;
 }
+
+.dropdown-Sort-metod-content{
+    position: relative;
+    display: inline-block;
+}
+.submenu{
+    background-color: var(--light-hover-gray);
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, 12%);
+    display: none;
+    overflow: auto;
+    z-index: 1;
+}
+
+.Sort-metod{
+    padding: 12px 16px;
+    display: block;
+    text-decoration: none;
+    font:var(--small-buttom);
+    color: var(--wight);
+    border-bottom: 1px solid var(--grey);
+}
+.Sort-metod:last-child {
+    border-bottom:none;
+}
+.Sort-metod:hover{
+    background-color: var(--light-grey);
+}
+.show {display: block;}
